Crash on "Import ..." any light type (matcap, world hdri, env hdri) #56120

Closed
opened 2018-07-27 15:44:45 +02:00 by filip mond · 4 comments

System Information
OS X 10.12.6, NVIDIA GeForce GTX 780M 4096 MB

Blender Version
Broken: 2.8 (today build)
Worked:

Short description of error
Immediate crash on "Import ..." any kind of light in User Preferences

Exact steps for others to reproduce the error
Click on "Import ..."

180727-0001.png

**System Information** OS X 10.12.6, NVIDIA GeForce GTX 780M 4096 MB **Blender Version** Broken: 2.8 (today build) Worked: **Short description of error** Immediate crash on "Import ..." any kind of light in User Preferences **Exact steps for others to reproduce the error** Click on "Import ..." ![180727-0001.png](https://archive.blender.org/developer/F4060644/180727-0001.png)
Author

Added subscriber: @FilipMond

Added subscriber: @FilipMond
filip mond changed title from Crash on "Import ..." any light type (madcap, world hdri, env hdri) to Crash on "Import ..." any light type (matcap, world hdri, env hdri) 2018-07-27 15:45:43 +02:00

This issue was referenced by f50fa4c5d6

This issue was referenced by f50fa4c5d69a50fca880d1abb0b49d06d4745be8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 018c9af446

This issue was referenced by 018c9af446de10f038a6e641ca3a61ce451a7c92
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56120
No description provided.