Fix T56120: Crash on "Install Matcap, World or Camera HDRI"

Code was trying to hide properties by name that may not exist.
Check if it was actually found and add 'files' to the filter,
since it is what WM_OT_studio_lights_install uses.